fix: address SonarQube issues in test files (constants, resources, exception types)
Agent-Logs-Url: https://github.com/nbauma109/ecd/sessions/2fa88b59-f82f-4d2c-8287-598932ecf8ce

Co-authored-by: nbauma109 <9403560+nbauma109@users.noreply.github.com>